fix lazyload issues

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -49,7 +49,7 @@ layout: base
                                     <div class="carousel-text pb-1">
                                         <a href="{{ article.url }}" class="no-underline"><p class="text-left text-grey-dark">{{ article.title }}</p></a>
                                         <p class="text-left my-2">{{ article.description }}</p>
-                                        <a href="{{ article.url }}" class="text-left action-link block"><span>Learn more<i class="right-arrow"></i></span></a>
+                                        <a href="{{ article.url }}" class="text-left action-link block"><span>{{ site.language[page.lang].homepage-carousel-button-text }}<i class="right-arrow"></i></span></a>
                                     </div>
                                 </div>
                             </div>
