--- a/public/assets/app.css
+++ b/public/assets/app.css
@@ -4780,6 +4780,7 @@ html.stuck .page-header {
 html.stuck body {
   overflow: hidden;
   padding-top: 6rem;
+  word-break: break-all;
 }
 
 html.stuck .page-header {
@@ -5327,6 +5328,7 @@ html {
   color: rgba(0, 0, 0, .84);
   letter-spacing: .025em;
   margin: 1rem 0 1rem;
+  word-break: break-all;
 }
 
 .article-content h1,
@@ -5460,7 +5462,7 @@ html {
   color: #f29205;
   text-decoration: none;
   overflow-wrap: break-word;
-  word-break: break-word;
+  word-break: break-all;
   word-wrap: break-word;
 }
 
@@ -5582,7 +5584,7 @@ html {
 .article-content .action-link {
   text-decoration: none;
   overflow-wrap: break-word;
-  word-break: break-word;
+  word-break: break-all;
   word-wrap: break-word;
   text-align: center;
 }
@@ -5687,7 +5689,7 @@ pre[class*="language-"] {
   text-align: left;
   white-space: pre;
   word-spacing: normal;
-  word-break: normal;
+  word-break: break-all;
   word-wrap: normal;
   line-height: 1.5;
   -moz-tab-size: 4;
