--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -81,7 +81,7 @@ layout: base
         <div class="w-full">
             <a href="{{ url }}">
                 <div>
-                    <img src="/assets/images/blank.png" alt="{{ title }}" data-echo="{{ imageUrl }}">
+                    <img alt="{{ title }}" data-src="{{ imageUrl }}" src="/assets/images/blank.png">
                     <p class="mt-2">{{ title }}</p>
                 </div>
             </a>
