--- a/resources/sass/_article_content.scss
+++ b/resources/sass/_article_content.scss
@@ -148,7 +148,7 @@ html {
     color: rgba(0,0,0,.84);
     letter-spacing: 0.025em;
     margin: 1rem 0 1rem;
-    word-break: break-all;
+    word-break: break-word;
   }
 
   h1,
@@ -296,7 +296,7 @@ html {
     color: #f29205;
     text-decoration: none;
     overflow-wrap: break-word;
-    word-break: break-all;
+    word-break: break-word;
     word-wrap: break-word;
 
   }
@@ -407,7 +407,7 @@ html {
   .action-link {
     text-decoration: none;
     overflow-wrap: break-word;
-    word-break: break-all;
+    word-break: break-word;
     word-wrap: break-word;
     text-align: center;
 
