--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -23,7 +23,7 @@ html.stuck {
   body {
     overflow: hidden;
     padding-top: 6rem;
-    word-break: break-all;
+    word-break: break-word;
   }
 
   .page-header {
