Text updates, open links in new window

--- a/_includes/menu_cta_button.html
+++ b/_includes/menu_cta_button.html
@@ -1,5 +1,5 @@
 <div class="text-grey-light page-header-bg px-2 flex items-center h-12">
     <button class="text-white py-3 px-4 mx-2 menu-cta-button text-xl tracking-base">
-        <a class="no-underline text-white" href="{{ site.language[page.lang].top-menu-cta-button-url }}">{{ site.language[page.lang].top-menu-cta-button-text }}</a>
+        <a class="no-underline text-white" href="{{ site.language[page.lang].top-menu-cta-button-url }}" target="_blank">{{ site.language[page.lang].top-menu-cta-button-text }}</a>
     </button>
 </div>
