--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -10,13 +10,13 @@
                         <div class="mr-12 mt-12 md:mt-0">
                             <h4 class="mb-4 font-light border-b border-grey-light text-3xl text-white">{{ text.footer-github }}</h4>
                             <p class="mb-3 font-bold text-white">
-                                <a href="{% include github-link.html %}" class="text-white no-underline hover:underline font-light">{{ text.footer-github-text }}</a>
+                                <a href="{% include github-link.html %}" class="text-white no-underline hover:underline font-light" target="_blank">{{ text.footer-github-text }}</a>
                             </p>
                         </div>
                     <div class="mr-12 mt-12 md:mt-0">
                         <h4 class="mb-4 font-light border-b border-grey-light text-3xl text-white">{{ text.footer-support }}</h4>
                         <p class="mb-3 font-bold text-white">{{ text.footer-support-tel }}
-                            <a href="#" class="text-white no-underline hover:underline font-light">+49 711 46 05 99 -61</a>
+                            <a href="#" class="text-white no-underline hover:underline font-light">+49 711 46 05 99 - 61</a>
                         </p>
                         <p class="mb-3 font-bold text-white">{{ text.footer-support-email }}
                             <a href="mailto:support@peakboard.com" class="text-white no-underline hover:underline font-light">support@peakboard.com</a>
@@ -28,7 +28,7 @@
                             <a href="mailto:info@peakboard.com" class="text-white no-underline hover:underline font-light">info@peakboard.com</a>
                         </p>
                         <p class="mb-3 font-bold text-white">{{ text.footer-contact-website }}
-                            <a href="https://www.peakboard.com" class="text-white no-underline hover:underline font-light">www.peakboard.com</a>
+                            <a href="https://www.peakboard.com" class="text-white no-underline hover:underline font-light" target="_blank">www.peakboard.com</a>
                         </p>
                     </div>
                 </div>
