--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -30,38 +30,40 @@ layout: base
         <div class="w-full lg:w-3/4 px-2">
             {% assign collections = site.collections | sort: 'position' %}
 
-            <div id="carousel">
-                <div class="carousel-container lg:block">
-                {% assign amount_of_items = 0 %}
-                {% for collection in collections %}
-                  {% if collection.label != "posts" %}
-                    {% assign articles = site[collection.label] | where:"lang",page.lang | where:"carousel","true" %}
+            <div class="hidden lg:block">
+                <div id="carousel">
+                    <div class="carousel-container lg:block">
+                    {% assign amount_of_items = 0 %}
+                    {% for collection in collections %}
+                      {% if collection.label != "posts" %}
+                        {% assign articles = site[collection.label] | where:"lang",page.lang | where:"carousel","true" %}
 
-                    {% for article in articles %}
-                        {% assign amount_of_items = amount_of_items | plus: 1 %}
-                        <div class="carousel lg:h-64 mb-4 p-4">
-                            <div class="flex h-full">
-                                <div class="w-full lg:w-1/2">
-                                    {% assign basePath = article.url | split: '/' %}
-                                    <a href="{{ article.url }}"><img src="/{{ basePath[1] }}/{{ article.image }}" alt="{{ article.title }}" class="max-h-full"></a>
-                                </div>
-                                <div class="w-full lg:w-1/2 h-full relative pl-4">
-                                    <div class="carousel-text pb-1">
-                                        <a href="{{ article.url }}" class="no-underline"><p class="text-left text-grey-dark">{{ article.title }}</p></a>
-                                        <p class="text-left my-2">{{ article.description }}</p>
-                                        <a href="{{ article.url }}" class="text-left action-link block"><span>{{ site.language[page.lang].homepage-carousel-button-text }}<i class="right-arrow"></i></span></a>
+                        {% for article in articles %}
+                            {% assign amount_of_items = amount_of_items | plus: 1 %}
+                            <div class="carousel lg:h-64 mb-4 p-4">
+                                <div class="flex h-full">
+                                    <div class="w-full lg:w-1/2">
+                                        {% assign basePath = article.url | split: '/' %}
+                                        <a href="{{ article.url }}"><img src="/{{ basePath[1] }}/{{ article.image }}" alt="{{ article.title }}" class="max-h-full"></a>
+                                    </div>
+                                    <div class="w-full lg:w-1/2 h-full relative pl-4">
+                                        <div class="carousel-text pb-1">
+                                            <a href="{{ article.url }}" class="no-underline"><p class="text-left text-grey-dark">{{ article.title }}</p></a>
+                                            <p class="text-left my-2 truncate-overflow">{{ article.description }}</p>
+                                            <a href="{{ article.url }}" class="text-left action-link block"><span>{{ site.language[page.lang].homepage-carousel-button-text }}<i class="right-arrow"></i></span></a>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
-                        </div>
+                        {% endfor %}
+                      {% endif %}
                     {% endfor %}
-                  {% endif %}
-                {% endfor %}
-                </div>
-                <div class="justify-center hidden lg:flex">
-                    {% for num in (1..amount_of_items) %}
-                        <button class="carousel-button {% if forloop.first %}carousel-button--active{% endif %} mr-2" data-id="{{ forloop.index0 }}"></button>
-                    {% endfor %}
+                    </div>
+                    <div class="justify-center hidden lg:flex">
+                        {% for num in (1..amount_of_items) %}
+                            <button class="carousel-button {% if forloop.first %}carousel-button--active{% endif %} mr-2" data-id="{{ forloop.index0 }}"></button>
+                        {% endfor %}
+                    </div>
                 </div>
             </div>
             <div id="hits-container" class="flex mb-4 {% if amount_of_items != 0 %}mt-8{% endif %}">
