Fix for footer phone link

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -20,7 +20,7 @@
                     <div class="mr-12 mt-12 md:mt-0">
                         <h4 class="mb-4 font-light border-b border-grey-light text-3xl text-white">{{ text.footer-support }}</h4>
                         <p class="mb-3 font-bold text-white">{{ text.footer-support-tel }}
-                            <a href="#" class="text-white no-underline hover:underline font-light">+49 711 46 05 99 - 61</a>
+                            <a href="tel:004971146059961" class="text-white no-underline hover:underline font-light">+49 711 46 05 99 - 61</a>
                         </p>
                         <p class="mb-3 font-bold text-white">{{ text.footer-support-email }}
                             <a href="mailto:support@peakboard.com" class="text-white no-underline hover:underline font-light">support@peakboard.com</a>
