--- a/resources/sass/_article_content.scss
+++ b/resources/sass/_article_content.scss
@@ -161,38 +161,39 @@ html {
 
   h2,
   .h2 {
+    margin-top: 1rem;
+    font-size: 2.375rem;
+    line-height: 2.875rem;
+    font-weight: 600;
+  }
+
+  h3,
+  .h3 {
     font-size: 2rem;
     line-height: 2.125rem;
     font-weight: 400;
   }
 
-  h3,
-  .h3 {
+  h4,
+  .h4 {
     font-size: 1.25rem;
     font-weight: 400;
     text-transform: uppercase;
     color: rgba(0, 0, 0, .84);
   }
 
-  h4,
-  .h4 {
+  h5,
+  .h5 {
     font-size: 1rem;
     line-height: 1.5rem;
     font-weight: 300;
     border-bottom: 2px solid #f2f3f4;
   }
 
-  h5,
-  .h5 {
-    font-size: 0.875rem;
-    line-height: 1.375rem;
-    text-transform: uppercase;
-  }
-
   h6,
   .h6 {
-    font-size: 0.75rem;
-    line-height: 1.25rem;
+    font-size: 0.875rem;
+    line-height: 1.375rem;
     text-transform: uppercase;
   }
 
