--- a/_includes/head.html
+++ b/_includes/head.html
@@ -11,6 +11,7 @@
 
 <link rel="canonical" href="{{ page.url | replace:'index.html','' | absolute_url }}">
 <link rel="manifest" href="/manifest.json">
+<link href="{{ '/assets/lity.min.css' | relative_url }}?{{ site.time | date: '%s%N' }}" rel="stylesheet">
 <link href="{{ '/assets/app.css' | relative_url }}?{{ site.time | date: '%s%N' }}" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
 <link rel="icon" type="image/x-icon" href="/assets/images/favicon.png" />
