--- a/resources/sass/_article_content.scss
+++ b/resources/sass/_article_content.scss
@@ -486,3 +486,45 @@ html {
     word-break: break-all;
   }
 }
+
+.video-thumbnail {
+  position: relative;
+  float: left;
+  img {
+    display: block;
+  }
+  &:after, &:before {
+    content: "";
+    position: absolute;
+    top: 50%;
+    left: 50%;
+  }
+  &:after {
+    width: 0;
+    height: 0;
+    border: 16px solid transparent;
+    border-left: 20px solid #fff;
+    margin-top: -20px;
+    margin-left: -10px;
+    -webkit-filter: drop-shadow(0px 0px 2px rgba(0,0,0,0.25));
+  }
+  &:before {
+    margin-top: -34px;
+    margin-left: -34px;
+    width: 60px;
+    height: 60px;
+    border: 3px solid #000;
+    border-radius: 50%;
+    box-shadow: 0 0 4px rgba(black, 0.18);
+    background: rgba(black, 100);
+  }
+  &:hover {
+    border-bottom: 0;
+    &:before {
+      background: rgba(black, 0.7);
+    }
+  }
+  &:focus {
+    border-bottom: 0;
+  }
+}
