change padding for related articles section

--- a/_layouts/article.html
+++ b/_layouts/article.html
@@ -34,7 +34,7 @@ layout: base
 {% if page.overview_description or page.overview_benefits or page.overview_data_sources %}
 
 <div class="article-overview {% if darkBackground == 'true' %}dark-background{% endif %}">
-    <div class="py-8 max-w-xl px-4 mx-auto py-6">
+    <div class="py-8 max-w-xl px-4 mx-auto">
         <h2 style="color: rgba(0, 0, 0, .84);">Overview</h2>
 
         <div class="flex flex-wrap my-4">
@@ -92,7 +92,7 @@ layout: base
 {% endif %}
 
 <div class="article-overview {% if darkBackground == 'true' %}dark-background{% endif %}">
-    <div class="py-8 max-w-xl px-4 mx-auto pt-6">
+    <div class="py-16 max-w-xl px-4 mx-auto">
         <h2 style="color: rgba(0, 0, 0, .84);">Related Templates</h2>
 
         <div class="flex flex-wrap my-4">
