Remove lity param from related article blocks

--- a/_layouts/article.html
+++ b/_layouts/article.html
@@ -127,10 +127,10 @@ layout: base
                         {% assign imageUrlPath = singleTemplate.url | split: '/' %}
                         <div class="w-full lg:w-1/3 xl:w-1/3 overflow-hidden mb-4 lg:mb-0 xl:mb-0 pr-2">
                             <div class="px-4 py-4 bg-white h-full border-2 rounded border-gray-400 hover:border-orange">
-                                <a class="no-underline" href="{{ site.baseurl }}{{ singleTemplate.url }}" data-lity>
+                                <a class="no-underline" href="{{ site.baseurl }}{{ singleTemplate.url }}">
                                     <img class="w-full lightbox-ignore" src="{{ site.baseurl }}/{{ imageUrlPath[1] }}/{{ singleTemplate.image }}" alt="{{ singleTemplate.title }}">
                                 </a>
-                                <a class="no-underline text-black" href="{{ site.baseurl }}{{ singleTemplate.url }}" data-lity>
+                                <a class="no-underline text-black" href="{{ site.baseurl }}{{ singleTemplate.url }}">
                                     <div class="text-black mb-2">{{ singleTemplate.title | escape }}</div>
                                 </a>
                             </div>
@@ -175,10 +175,10 @@ layout: base
                             {% assign imageUrlPath = singleTemplate.url | split: '/' %}
                             <div class="w-full lg:w-1/3 xl:w-1/3 overflow-hidden mb-4 lg:mb-0 xl:mb-0 pr-2">
                                 <div class="px-4 py-4 bg-white h-full border-2 rounded border-gray-400 hover:border-orange">
-                                    <a class="no-underline" href="{{ site.baseurl }}{{ singleTemplate.url }}" data-lity>
+                                    <a class="no-underline" href="{{ site.baseurl }}{{ singleTemplate.url }}">
                                         <img class="w-full lightbox-ignore" src="{{ site.baseurl }}/{{ imageUrlPath[1] }}/{{ singleTemplate.image }}" alt="{{ singleTemplate.title }}">
                                     </a>
-                                    <a class="no-underline text-black" href="{{ site.baseurl }}{{ singleTemplate.url }}" data-lity>
+                                    <a class="no-underline text-black" href="{{ site.baseurl }}{{ singleTemplate.url }}">
                                         <div class="text-black mb-2">{{ singleTemplate.title | escape }}</div>
                                     </a>
                                 </div>
@@ -223,10 +223,10 @@ layout: base
                             {% assign imageUrlPath = singleTemplate.url | split: '/' %}
                             <div class="w-full lg:w-1/3 xl:w-1/3 overflow-hidden mb-4 lg:mb-0 xl:mb-0 pr-2">
                                 <div class="px-4 py-4 bg-white h-full border-2 rounded border-gray-400 hover:border-orange">
-                                    <a class="no-underline" href="{{ site.baseurl }}{{ singleTemplate.url }}" data-lity>
+                                    <a class="no-underline" href="{{ site.baseurl }}{{ singleTemplate.url }}">
                                         <img class="w-full lightbox-ignore" src="{{ site.baseurl }}/{{ imageUrlPath[1] }}/{{ singleTemplate.image }}" alt="{{ singleTemplate.title }}">
                                     </a>
-                                    <a class="no-underline text-black" href="{{ site.baseurl }}{{ singleTemplate.url }}" data-lity>
+                                    <a class="no-underline text-black" href="{{ site.baseurl }}{{ singleTemplate.url }}">
                                         <div class="text-black mb-2">{{ singleTemplate.title | escape }}</div>
                                     </a>
                                 </div>
@@ -271,10 +271,10 @@ layout: base
                             {% assign imageUrlPath = singleTemplate.url | split: '/' %}
                             <div class="w-full lg:w-1/3 xl:w-1/3 overflow-hidden mb-4 lg:mb-0 xl:mb-0 pr-2">
                                 <div class="px-4 py-4 bg-white h-full border-2 rounded border-gray-400 hover:border-orange">
-                                    <a class="no-underline" href="{{ site.baseurl }}{{ singleTemplate.url }}" data-lity>
+                                    <a class="no-underline" href="{{ site.baseurl }}{{ singleTemplate.url }}">
                                         <img class="w-full lightbox-ignore" src="{{ site.baseurl }}/{{ imageUrlPath[1] }}/{{ singleTemplate.image }}" alt="{{ singleTemplate.title }}">
                                     </a>
-                                    <a class="no-underline text-black" href="{{ site.baseurl }}{{ singleTemplate.url }}" data-lity>
+                                    <a class="no-underline text-black" href="{{ site.baseurl }}{{ singleTemplate.url }}">
                                         <div class="text-black mb-2">{{ singleTemplate.title | escape }}</div>
                                     </a>
                                 </div>
@@ -319,10 +319,10 @@ layout: base
                             {% assign imageUrlPath = singleTemplate.url | split: '/' %}
                             <div class="w-full lg:w-1/3 xl:w-1/3 overflow-hidden mb-4 lg:mb-0 xl:mb-0 pr-2">
                                 <div class="px-4 py-4 bg-white h-full border-2 rounded border-gray-400 hover:border-orange">
-                                    <a class="no-underline" href="{{ site.baseurl }}{{ singleTemplate.url }}" data-lity>
+                                    <a class="no-underline" href="{{ site.baseurl }}{{ singleTemplate.url }}">
                                         <img class="w-full lightbox-ignore" src="{{ site.baseurl }}/{{ imageUrlPath[1] }}/{{ singleTemplate.image }}" alt="{{ singleTemplate.title }}">
                                     </a>
-                                    <a class="no-underline text-black" href="{{ site.baseurl }}{{ singleTemplate.url }}" data-lity>
+                                    <a class="no-underline text-black" href="{{ site.baseurl }}{{ singleTemplate.url }}">
                                         <div class="text-black mb-2">{{ singleTemplate.title | escape }}</div>
                                     </a>
                                 </div>
