Add trackable link in footer

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -32,7 +32,7 @@
                             <a href="mailto:info@peakboard.com" class="text-white no-underline hover:underline font-light">info@peakboard.com</a>
                         </p>
                         <p class="mb-3 font-bold text-white">{{ text.footer-contact-website }}
-                            <a href="https://www.peakboard.com" class="text-white no-underline hover:underline font-light" target="_blank">www.peakboard.com</a>
+                            <a href="https://www.peakboard.com/?utm_source=templates_overview&utm_medium=website_link_footer&utm_campaign=templates" class="text-white no-underline hover:underline font-light" target="_blank">www.peakboard.com</a>
                         </p>
                     </div>
                 </div>
