--- a/_layouts/article.html
+++ b/_layouts/article.html
@@ -113,8 +113,6 @@ layout: base
                         {% if page.category contains category %}
                             {% if singleTemplate.isDraft != true and singleTemplate.lang == page.lang %}
                                 {% assign sameCategoryCount = sameCategoryCount | plus: 1 %}
-                                {% capture categorymarkup %} <span class="label label-default">{{ category }}</span> {% endcapture %}
-                                {% assign commonCategories = commonCategories | append: categorymarkup | append:", " %}
                             {% endif %}
                         {% endif %}
                     {% endif %}
@@ -125,10 +123,15 @@ layout: base
                     {% assign existingRelatedTitleCheck = singleTemplate.title | remove: " " %}
                     {% unless arrayExistingRelated contains existingRelatedTitleCheck %}
                         {% assign imageUrlPath = singleTemplate.url | split: '/' %}
+                        {% if image_thumbnail %}
+                            {% capture imageUrl %}{{ site.baseurl }}/{{ imageUrlPath[1] }}/{{ singleTemplate.image_thumbnail }}{% endcapture %}
+                        {% else %}
+                            {% capture imageUrl %}{{ site.baseurl }}/{{ imageUrlPath[1] }}/{{ singleTemplate.image }}{% endcapture %}
+                        {% endif %}
                         <div class="w-full lg:w-1/3 xl:w-1/3 overflow-hidden mb-4 lg:mb-0 xl:mb-0 pr-2">
                             <div class="px-4 py-4 bg-white h-full border-2 rounded border-gray-400 hover:border-orange">
                                 <a class="no-underline" href="{{ site.baseurl }}{{ singleTemplate.url }}">
-                                    <img class="w-full lightbox-ignore" src="{{ site.baseurl }}/{{ imageUrlPath[1] }}/{{ singleTemplate.image }}" alt="{{ singleTemplate.title }}">
+                                    <img class="w-full lightbox-ignore" src="{{ imageUrl }}" alt="{{ singleTemplate.title }}">
                                 </a>
                                 <a class="no-underline text-black" href="{{ site.baseurl }}{{ singleTemplate.url }}">
                                     <div class="text-black mb-2">{{ singleTemplate.title | escape }}</div>
@@ -158,8 +161,6 @@ layout: base
                             {% if page.category contains category %}
                                 {% if singleTemplate.isDraft != true and singleTemplate.lang == page.lang %}
                                     {% assign sameCategoryCount = sameCategoryCount | plus: 1 %}
-                                    {% capture categorymarkup %} <span class="label label-default">{{ category }}</span> {% endcapture %}
-                                    {% assign commonCategories = commonCategories | append: categorymarkup | append:", " %}
                                 {% endif %}
                             {% endif %}
                         {% endif %}
@@ -173,10 +174,15 @@ layout: base
                         {% assign existingRelatedTitleCheck = singleTemplate.title | remove: " " %}
                         {% unless arrayExistingRelated contains existingRelatedTitleCheck %}
                             {% assign imageUrlPath = singleTemplate.url | split: '/' %}
+                            {% if image_thumbnail %}
+                                {% capture imageUrl %}{{ site.baseurl }}/{{ imageUrlPath[1] }}/{{ singleTemplate.image_thumbnail }}{% endcapture %}
+                            {% else %}
+                                {% capture imageUrl %}{{ site.baseurl }}/{{ imageUrlPath[1] }}/{{ singleTemplate.image }}{% endcapture %}
+                            {% endif %}
                             <div class="w-full lg:w-1/3 xl:w-1/3 overflow-hidden mb-4 lg:mb-0 xl:mb-0 pr-2">
                                 <div class="px-4 py-4 bg-white h-full border-2 rounded border-gray-400 hover:border-orange">
                                     <a class="no-underline" href="{{ site.baseurl }}{{ singleTemplate.url }}">
-                                        <img class="w-full lightbox-ignore" src="{{ site.baseurl }}/{{ imageUrlPath[1] }}/{{ singleTemplate.image }}" alt="{{ singleTemplate.title }}">
+                                        <img class="w-full lightbox-ignore" src="{{ imageUrl }}" alt="{{ singleTemplate.title }}">
                                     </a>
                                     <a class="no-underline text-black" href="{{ site.baseurl }}{{ singleTemplate.url }}">
                                         <div class="text-black mb-2">{{ singleTemplate.title | escape }}</div>
@@ -206,8 +212,6 @@ layout: base
                             {% if page.category contains category %}
                                 {% if singleTemplate.isDraft != true and singleTemplate.lang == page.lang %}
                                     {% assign sameCategoryCount = sameCategoryCount | plus: 1 %}
-                                    {% capture categorymarkup %} <span class="label label-default">{{ category }}</span> {% endcapture %}
-                                    {% assign commonCategories = commonCategories | append: categorymarkup | append:", " %}
                                 {% endif %}
                             {% endif %}
                         {% endif %}
@@ -220,11 +224,16 @@ layout: base
                         {% assign arrayExistingRelated = existingRelated | split: "|" %}
                         {% assign existingRelatedTitleCheck = singleTemplate.title | remove: " " %}
                         {% unless arrayExistingRelated contains existingRelatedTitleCheck %}
-                            {% assign imageUrlPath = singleTemplate.url | split: '/' %}
+                        {% assign imageUrlPath = singleTemplate.url | split: '/' %}
+                        {% if image_thumbnail %}
+                            {% capture imageUrl %}{{ site.baseurl }}/{{ imageUrlPath[1] }}/{{ singleTemplate.image_thumbnail }}{% endcapture %}
+                        {% else %}
+                            {% capture imageUrl %}{{ site.baseurl }}/{{ imageUrlPath[1] }}/{{ singleTemplate.image }}{% endcapture %}
+                        {% endif %}
                             <div class="w-full lg:w-1/3 xl:w-1/3 overflow-hidden mb-4 lg:mb-0 xl:mb-0 pr-2">
                                 <div class="px-4 py-4 bg-white h-full border-2 rounded border-gray-400 hover:border-orange">
                                     <a class="no-underline" href="{{ site.baseurl }}{{ singleTemplate.url }}">
-                                        <img class="w-full lightbox-ignore" src="{{ site.baseurl }}/{{ imageUrlPath[1] }}/{{ singleTemplate.image }}" alt="{{ singleTemplate.title }}">
+                                        <img class="w-full lightbox-ignore" src="{{ imageUrl }}" alt="{{ singleTemplate.title }}">
                                     </a>
                                     <a class="no-underline text-black" href="{{ site.baseurl }}{{ singleTemplate.url }}">
                                         <div class="text-black mb-2">{{ singleTemplate.title | escape }}</div>
@@ -254,8 +263,6 @@ layout: base
                             {% if page.category contains category %}
                                 {% if singleTemplate.isDraft != true and singleTemplate.lang == page.lang %}
                                     {% assign sameCategoryCount = sameCategoryCount | plus: 1 %}
-                                    {% capture categorymarkup %} <span class="label label-default">{{ category }}</span> {% endcapture %}
-                                    {% assign commonCategories = commonCategories | append: categorymarkup | append:", " %}
                                 {% endif %}
                             {% endif %}
                         {% endif %}
@@ -269,10 +276,15 @@ layout: base
                         {% assign existingRelatedTitleCheck = singleTemplate.title | remove: " " %}
                         {% unless arrayExistingRelated contains existingRelatedTitleCheck %}
                             {% assign imageUrlPath = singleTemplate.url | split: '/' %}
+                            {% if image_thumbnail %}
+                                {% capture imageUrl %}{{ site.baseurl }}/{{ imageUrlPath[1] }}/{{ singleTemplate.image_thumbnail }}{% endcapture %}
+                            {% else %}
+                                {% capture imageUrl %}{{ site.baseurl }}/{{ imageUrlPath[1] }}/{{ singleTemplate.image }}{% endcapture %}
+                            {% endif %}
                             <div class="w-full lg:w-1/3 xl:w-1/3 overflow-hidden mb-4 lg:mb-0 xl:mb-0 pr-2">
                                 <div class="px-4 py-4 bg-white h-full border-2 rounded border-gray-400 hover:border-orange">
                                     <a class="no-underline" href="{{ site.baseurl }}{{ singleTemplate.url }}">
-                                        <img class="w-full lightbox-ignore" src="{{ site.baseurl }}/{{ imageUrlPath[1] }}/{{ singleTemplate.image }}" alt="{{ singleTemplate.title }}">
+                                        <img class="w-full lightbox-ignore" src="{{ imageUrl }}" alt="{{ singleTemplate.title }}">
                                     </a>
                                     <a class="no-underline text-black" href="{{ site.baseurl }}{{ singleTemplate.url }}">
                                         <div class="text-black mb-2">{{ singleTemplate.title | escape }}</div>
@@ -302,8 +314,6 @@ layout: base
                             {% if page.category contains category %}
                                 {% if singleTemplate.isDraft != true and singleTemplate.lang == page.lang %}
                                     {% assign sameCategoryCount = sameCategoryCount | plus: 1 %}
-                                    {% capture categorymarkup %} <span class="label label-default">{{ category }}</span> {% endcapture %}
-                                    {% assign commonCategories = commonCategories | append: categorymarkup | append:", " %}
                                 {% endif %}
                             {% endif %}
                         {% endif %}
@@ -317,10 +327,15 @@ layout: base
                         {% assign existingRelatedTitleCheck = singleTemplate.title | remove: " " %}
                         {% unless arrayExistingRelated contains existingRelatedTitleCheck %}
                             {% assign imageUrlPath = singleTemplate.url | split: '/' %}
+                            {% if image_thumbnail %}
+                                {% capture imageUrl %}{{ site.baseurl }}/{{ imageUrlPath[1] }}/{{ singleTemplate.image_thumbnail }}{% endcapture %}
+                            {% else %}
+                                {% capture imageUrl %}{{ site.baseurl }}/{{ imageUrlPath[1] }}/{{ singleTemplate.image }}{% endcapture %}
+                            {% endif %}
                             <div class="w-full lg:w-1/3 xl:w-1/3 overflow-hidden mb-4 lg:mb-0 xl:mb-0 pr-2">
                                 <div class="px-4 py-4 bg-white h-full border-2 rounded border-gray-400 hover:border-orange">
                                     <a class="no-underline" href="{{ site.baseurl }}{{ singleTemplate.url }}">
-                                        <img class="w-full lightbox-ignore" src="{{ site.baseurl }}/{{ imageUrlPath[1] }}/{{ singleTemplate.image }}" alt="{{ singleTemplate.title }}">
+                                        <img class="w-full lightbox-ignore" src="{{ imageUrl }}" alt="{{ singleTemplate.title }}">
                                     </a>
                                     <a class="no-underline text-black" href="{{ site.baseurl }}{{ singleTemplate.url }}">
                                         <div class="text-black mb-2">{{ singleTemplate.title | escape }}</div>
