--- a/_layouts/article.html
+++ b/_layouts/article.html
@@ -7,11 +7,11 @@ layout: base
 {% assign darkBackground = 'true' %}
 
 <section class="article-content max-w-xl px-4 mx-auto py-8">
-    <a class="font-medium" href="{{ site.url }}{% if page.lang == 'en' %}/en/{% endif %}{% if page.lang == 'cn' %}/en/{% endif %}">{{ site.language[page.lang].page-top-overview-text }}</a>
+    <a class="font-medium" href="{{ site.url }}{% if page.lang == 'en' %}/en/{% endif %}{% if page.lang == 'cn' %}/cn/{% endif %}">{{ site.language[page.lang].page-top-overview-text }}</a>
     <h1>{{ page.title }}</h1>
     <p class="text-grey mb-4">
         {% for category in page.category %}
-        <a href="{{ site.url }}{% if page.lang == 'en' %}/en/{% endif %}{% if page.lang == 'cn' %}/en/{% endif %}?menu%5Bcategory%5D={{ category }}&fromArticle=true" style="color: #b8c2cc;">{{ category | upcase }}</a>{% if forloop.last == false %}, {% endif %}
+        <a href="{{ site.url }}{% if page.lang == 'en' %}/en/{% endif %}{% if page.lang == 'cn' %}/cn/{% endif %}?menu%5Bcategory%5D={{ category }}&fromArticle=true" style="color: #b8c2cc;">{{ category | upcase }}</a>{% if forloop.last == false %}, {% endif %}
         {% endfor %}
     </p>
 
@@ -123,7 +123,7 @@ layout: base
                     {% assign existingRelatedTitleCheck = singleTemplate.title | remove: " " %}
                     {% unless arrayExistingRelated contains existingRelatedTitleCheck %}
                         {% assign imageUrlPath = singleTemplate.url | split: '/' %}
-                        {% if image_thumbnail %}
+                        {% if singleTemplate.image_thumbnail %}
                             {% capture imageUrl %}{{ site.baseurl }}/{{ imageUrlPath[1] }}/{{ singleTemplate.image_thumbnail }}{% endcapture %}
                         {% else %}
                             {% capture imageUrl %}{{ site.baseurl }}/{{ imageUrlPath[1] }}/{{ singleTemplate.image }}{% endcapture %}
@@ -174,7 +174,7 @@ layout: base
                         {% assign existingRelatedTitleCheck = singleTemplate.title | remove: " " %}
                         {% unless arrayExistingRelated contains existingRelatedTitleCheck %}
                             {% assign imageUrlPath = singleTemplate.url | split: '/' %}
-                            {% if image_thumbnail %}
+                            {% if singleTemplate.image_thumbnail %}
                                 {% capture imageUrl %}{{ site.baseurl }}/{{ imageUrlPath[1] }}/{{ singleTemplate.image_thumbnail }}{% endcapture %}
                             {% else %}
                                 {% capture imageUrl %}{{ site.baseurl }}/{{ imageUrlPath[1] }}/{{ singleTemplate.image }}{% endcapture %}
@@ -225,7 +225,7 @@ layout: base
                         {% assign existingRelatedTitleCheck = singleTemplate.title | remove: " " %}
                         {% unless arrayExistingRelated contains existingRelatedTitleCheck %}
                         {% assign imageUrlPath = singleTemplate.url | split: '/' %}
-                        {% if image_thumbnail %}
+                        {% if singleTemplate.image_thumbnail %}
                             {% capture imageUrl %}{{ site.baseurl }}/{{ imageUrlPath[1] }}/{{ singleTemplate.image_thumbnail }}{% endcapture %}
                         {% else %}
                             {% capture imageUrl %}{{ site.baseurl }}/{{ imageUrlPath[1] }}/{{ singleTemplate.image }}{% endcapture %}
@@ -276,7 +276,7 @@ layout: base
                         {% assign existingRelatedTitleCheck = singleTemplate.title | remove: " " %}
                         {% unless arrayExistingRelated contains existingRelatedTitleCheck %}
                             {% assign imageUrlPath = singleTemplate.url | split: '/' %}
-                            {% if image_thumbnail %}
+                            {% if singleTemplate.image_thumbnail %}
                                 {% capture imageUrl %}{{ site.baseurl }}/{{ imageUrlPath[1] }}/{{ singleTemplate.image_thumbnail }}{% endcapture %}
                             {% else %}
                                 {% capture imageUrl %}{{ site.baseurl }}/{{ imageUrlPath[1] }}/{{ singleTemplate.image }}{% endcapture %}
@@ -327,7 +327,7 @@ layout: base
                         {% assign existingRelatedTitleCheck = singleTemplate.title | remove: " " %}
                         {% unless arrayExistingRelated contains existingRelatedTitleCheck %}
                             {% assign imageUrlPath = singleTemplate.url | split: '/' %}
-                            {% if image_thumbnail %}
+                            {% if singleTemplate.image_thumbnail %}
                                 {% capture imageUrl %}{{ site.baseurl }}/{{ imageUrlPath[1] }}/{{ singleTemplate.image_thumbnail }}{% endcapture %}
                             {% else %}
                                 {% capture imageUrl %}{{ site.baseurl }}/{{ imageUrlPath[1] }}/{{ singleTemplate.image }}{% endcapture %}
