Remove accidental text

--- a/_includes/page_header.html
+++ b/_includes/page_header.html
@@ -4,7 +4,7 @@
         <a class="no-underline w-full text-center max-w-xxs hover:opacity-75 focus:opacity-75" href="{{ home_link }}">
             <img src="/assets/logos/logo.svg" class="w-4/5" alt="Peakboard Logo">
         </a>
-    </div>git reset
+    </div>
     <div class="flex-auto h-24">
         <div class="flex items-center justify-end page-header-bg text-white h-24">
             {% include {{include.lang_selector}}_lang_selector.html %} {% include menu_cta_button.html %}
