--- a/_includes/article_lang_selector.html
+++ b/_includes/article_lang_selector.html
@@ -2,6 +2,8 @@
     {% assign posts = site[page.collection] | where: "ref", page.ref | where_exp: "item", "item.lang != page.lang" %}
     <span class="text-orange-light mr-2 uppercase">{{ page.lang }}</span>
     {% for post in posts %}
+    {% if site.languages contains post.lang %}
     /<a href="{{ post.url }}" class="no-underline text-grey ml-2 mr-2 uppercase hover:text-orange">{{ post.lang }}</a>
+    {% endif %}
     {% endfor %}
 </div>
