--- a/_includes/home_lang_selector.html
+++ b/_includes/home_lang_selector.html
@@ -7,4 +7,8 @@
         <a href="{{ '/' relative_url }}" class="no-underline text-grey mr-2 hover:text-orange">DE</a> /
         <span class="text-orange-light ml-2">EN</span>
     {% endif %}
+    {% if page.lang == "cn" %}
+    <a href="{{ '/' relative_url }}" class="no-underline text-grey mr-2 hover:text-orange">CN</a> /
+    <span class="text-orange-light ml-2">CN</span>
+    {% endif %}
 </div>
