--- a/_includes/home_lang_selector.html
+++ b/_includes/home_lang_selector.html
@@ -1,14 +1,17 @@
 <div class="text-grey-light page-header-bg px-2 flex items-center h-12">
     {% if page.lang == "de" %}
-        <span class="text-orange-light mr-2">DE</span> /
-        <a href="{{ '/en/' | relative_url }}" class="no-underline text-grey ml-2 hover:text-orange">EN</a>
+        <span class="text-orange-light mr-2 ml-2">DE</span>
+        {% if site.languages contains 'en' %}/ <a href="{{ '/en/' | relative_url }}" class="no-underline text-grey mr-2 ml-2 hover:text-orange">EN</a>{% endif %}
+        {% if site.languages contains 'cn' %}/ <a href="{{ '/cn/' | relative_url }}" class="no-underline text-grey mr-2 ml-2 hover:text-orange">CN</a>{% endif %}
     {% endif %}
     {% if page.lang == "en" %}
-        <a href="{{ '/' relative_url }}" class="no-underline text-grey mr-2 hover:text-orange">DE</a> /
-        <span class="text-orange-light ml-2">EN</span>
+        <span class="text-orange-light mr-2 ml-2">EN</span>
+        {% if site.languages contains 'de' %}/ <a href="{{ '/' | relative_url }}" class="no-underline text-grey mr-2 ml-2 hover:text-orange">DE</a>{% endif %}
+        {% if site.languages contains 'cn' %}/ <a href="{{ '/cn/' | relative_url }}" class="no-underline text-grey ml-2 mr-2 hover:text-orange">CN</a>{% endif %}
     {% endif %}
     {% if page.lang == "cn" %}
-    <a href="{{ '/' relative_url }}" class="no-underline text-grey mr-2 hover:text-orange">CN</a> /
-    <span class="text-orange-light ml-2">CN</span>
+        <span class="text-orange-light mr-2 ml-2">CN</span>
+        {% if site.languages contains 'de' %}/ <a href="{{ '/' | relative_url }}" class="no-underline text-grey mr-2 ml-2 hover:text-orange">DE</a>{% endif %}
+        {% if site.languages contains 'en' %}/ <a href="{{ '/en/' | relative_url }}" class="no-underline text-grey ml-2 mr-2 hover:text-orange">EN</a>{% endif %}
     {% endif %}
 </div>
